# nfedistribuicaodfe-service

./: .dockerignore  .env  .gitignore  Dockerfile  Portal da Nota Fiscal de Consumidor Eletrônica - SVRS.html  cert.pem  certificado.pfx  chaves.txt  config.py  convert_certificado.py  convert_certificate.py  docker-compose.yaml  download.py  fly.toml  key.pem  main.py  pyproject.toml  pytest.ini  req.xml  requirements.txt  test_imports.py  ui.py  ult_nsu.txt
.venv311/Scripts/: activate  activate.bat
certificate/: RK TENDAS VARIEDADES LTDA_59384398000150_SENHA1234_1007784481.pfx
sistema_de_download_nf_ce/: config.py  convert_certificado.py  download.py  main.py
sistema_de_download_nf_ce/distribuicao/: __init__.py  soap.py  urls.py  utils.py
testes/: __init__.py  conftest.py  run_tests.py  test_config.py  test_convert_certificado.py  test_download.py  test_download_conversao_certificado.py  test_download_integracao.py  test_download_requisicoes.py  test_download_uf_detection.py  test_main.py
venv311/Scripts/: activate  activate.bat
