[project]
name = "sistema-de-download-nf-ce"
version = "0.1.0"
description = "Aplicação Python para download automático de XMLs de Notas Fiscais Eletrônicas (NF-e/NFC-e) através do serviço de Distribuição de Documentos Fiscais Eletrônicos (DFe) da SEFAZ, utilizando certificado digital A1."
authors = [{ name = "dinhoSiwa", email = "claudiosilva.one@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "zeep>=4.2.0",
    "requests>=2.31.0",
    "requests-pkcs12>=1.18",
    "lxml>=4.9.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "signxml (>=4.2.1,<5.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m sistema_de_download_nf_ce.main"
lint = "ruff check ."
format = "ruff format ."
